--- a/Visión_Generación_de_estímulo_visual.ipynb
+++ b/Visión_Generación_de_estímulo_visual.ipynb
@@ -52,11 +52,10 @@
         "# Donde a = pi/ln(512), b = ln(512)/pi\n",
         "\n",
         "import numpy as np\n",
-        "import math\n",
         "\n",
         "def funchida(x, y):\n",
-        "    a = (math.pi) / (math.log(512))\n",
-        "    b = (math.log(512)) / (math.pi)\n",
+        "    a = (np.pi) / (np.log(512))\n",
+        "    b = (np.log(512)) / (np.pi)\n",
         "    c = 2\n",
         "\n",
         "    h = np.sin(a * np.exp(b * x))\n",
@@ -66,7 +65,7 @@
       "metadata": {
         "id": "nq712GH7k127"
       },
-      "execution_count": 78,
+      "execution_count": 94,
       "outputs": []
     },
     {
@@ -76,8 +75,8 @@
         "import matplotlib.pyplot as plt\n",
         "\n",
         "# Valores a evaluar\n",
-        "x = np.linspace(0, math.pi, 512)\n",
-        "y = np.linspace(0, math.pi, 512)\n",
+        "x = np.linspace(0, np.pi, 512)\n",
+        "y = np.linspace(0, np.pi, 512)\n",
         "X, Y = np.meshgrid(x, y)\n",
         "Z = funchida(X, Y)\n",
         "\n",
@@ -94,9 +93,9 @@
           "height": 542
         },
         "id": "nj4c3ISSVP-f",
-        "outputId": "2f8f2ede-08bf-490c-bcf8-0944b052c3f3"
+        "outputId": "2ff1dbe5-f6aa-4ae8-907a-60941f0aa15e"
       },
-      "execution_count": 90,
+      "execution_count": 95,
       "outputs": [
         {
           "output_type": "display_data",
@@ -126,9 +125,9 @@
           "height": 542
         },
         "id": "O0rLkYeivBAx",
-        "outputId": "f76c6820-e02a-441a-de5f-2fbb070d8f6a"
+        "outputId": "16b930b8-702d-45f7-fb7a-4bdbbd2d4e9a"
       },
-      "execution_count": 91,
+      "execution_count": 96,
       "outputs": [
         {
           "output_type": "display_data",
